--- a/app/index.html
+++ b/app/index.html
@@ -120,55 +120,55 @@
                             </ul>
                         </li>
 
-                        <li class="popup search">
-                            <a href="#">Search</a>
-                            <ul>
-                                <li>
-                                    <div class="popup">
-                                        <form>
-                                            <input type="text" name="search" value="" placeholder="search..." />
-                                        </form>
-                                        <ol>
-                                            <li>
-                                                <a href="#">
-                                                    <img src="images_dummy/search_icon1_dummy.jpg" alt="" />
-                                                    <div class="title">Lorum ipsum dolor</div>
-                                                    <div class="subtitle">Mobi leo risus</div>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
-                                                    <div class="title">Lorum ipsum dolor</div>
-                                                    <div class="subtitle">Mobi leo risus</div>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
-                                                    <div class="title">Lorum ipsum dolor</div>
-                                                    <div class="subtitle">Mobi leo risus</div>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <img src="images_dummy/search_icon1_dummy.jpg" alt="" />
-                                                    <div class="title">Lorum ipsum dolor</div>
-                                                    <div class="subtitle">Mobi leo risus</div>
-                                                </a>
-                                            </li>
-                                            <li>
-                                                <a href="#">
-                                                    <img src="images_dummy/search_icon2_dummy.jpg" alt="" />
-                                                    <div class="title">Lorum ipsum dolor</div>
-                                                    <div class="subtitle">Mobi leo risus</div>
-                                                </a>
-                                            </li>
-                                        </ol>
-                                    </div>
-                                </li>
-                            </ul>
-                        </li>
+                        <!--<li class="popup search">-->
+                            <!--<a href="#">Search</a>-->
+                            <!--<ul>-->
+                                <!--<li>-->
+                                    <!--<div class="popup">-->
+                                        <!--<form>-->
+                                            <!--<input type="text" name="search" value="" placeholder="search..." />-->
+                                        <!--</form>-->
+                                        <!--<ol>-->
+                                            <!--<li>-->
+                                                <!--<a href="#">-->
+                                                    <!--<img src="images_dummy/search_icon1_dummy.jpg" alt="" />-->
+                                                    <!--<div class="title">Lorum ipsum dolor</div>-->
+                                                    <!--<div class="subtitle">Mobi leo risus</div>-->
+                                                <!--</a>-->
+                                            <!--</li>-->
+                                            <!--<li>-->
+                                                <!--<a href="#">-->
+                                                    <!--<img src="images_dummy/search_icon2_dummy.jpg" alt="" />-->
+                                                    <!--<div class="title">Lorum ipsum dolor</div>-->
+                                                    <!--<div class="subtitle">Mobi leo risus</div>-->
+                                                <!--</a>-->
+                                            <!--</li>-->
+                                            <!--<li>-->
+                                                <!--<a href="#">-->
+                                                    <!--<img src="images_dummy/search_icon2_dummy.jpg" alt="" />-->
+                                                    <!--<div class="title">Lorum ipsum dolor</div>-->
+                                                    <!--<div class="subtitle">Mobi leo risus</div>-->
+                                                <!--</a>-->
+                                            <!--</li>-->
+                                            <!--<li>-->
+                                                <!--<a href="#">-->
+                                                    <!--<img src="images_dummy/search_icon1_dummy.jpg" alt="" />-->
+                                                    <!--<div class="title">Lorum ipsum dolor</div>-->
+                                                    <!--<div class="subtitle">Mobi leo risus</div>-->
+                                                <!--</a>-->
+                                            <!--</li>-->
+                                            <!--<li>-->
+                                                <!--<a href="#">-->
+                                                    <!--<img src="images_dummy/search_icon2_dummy.jpg" alt="" />-->
+                                                    <!--<div class="title">Lorum ipsum dolor</div>-->
+                                                    <!--<div class="subtitle">Mobi leo risus</div>-->
+                                                <!--</a>-->
+                                            <!--</li>-->
+                                        <!--</ol>-->
+                                    <!--</div>-->
+                                <!--</li>-->
+                            <!--</ul>-->
+                        <!--</li>-->
                     </ul>
                 </nav>
             </div>
@@ -198,17 +198,18 @@
                     <h4>Site map</h4>
                     <ul>
                         <li><a href="#">Schedule TBA</a></li>
-                        <li><a href="#">Speakers overview</a></li>
+                        <li><a href="#">Speakers TBA</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Practical</a></li>
+                        <li><a href="venue.html">Venue</a></li>
                     </ul>
                 </div>
 
                 <div class="col5">
                     <h4>Other countries</h4>
                     <ul>
-                        <li><a href="http://www.devoxx.fr">Devoxx France</a></li>
-                        <li><a href="http://www.devoxx.co.uk">Devoxx UK</a></li>
+                        <li><a href="http://www.devoxx.com/display/FR13/Accueil">Devoxx France</a></li>
+                        <li><a href="http://www.devoxx.com/display/UK13/Home">Devoxx UK</a></li>
                     </ul>
 
                     <h4>Follow us</h4>
@@ -232,7 +233,7 @@
         <div class="grid">
             <div class="row">
                 <div class="col11">
-                    <a href="#">privacy policy</a>
+                    <!--<a href="#">privacy policy</a>-->
                     <!--| <a href="#">disclaimer</a>-->
                 </div>
             </div>
